@@ -1,5 +1,8 @@
 Version 2.1.7
 ----------------------------------------------------------------------
+20 February 2007
++ Increased view list limits.
+
 15 February 2007
 + Added translate functions
 
